# nekro-plugin-magic-draw

./: README.md  __init__.py  plugin.py  pyproject.toml  utils.py
strategies/: __init__.py  base.py  costume_design_generator.py  gif_generator.py  transparent_png_generator.py
