[project]
name = "nekro-plugin-magic-draw"
version = "1.0.0"
description = "NekroAgent 高级绘图插件，提供 GIF 动画生成、透明背景 PNG 等复杂图像处理能力"
authors = [{ name = "KroMiose", email = "li_xiangff@163.com" }]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = ["nekro-agent>=2.0.0"]

[project.urls]
Repository = "https://github.com/KroMiose/nekro-plugin-magic-draw"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["__init__.py"]


[tool.black]
line-length = 128

[tool.ruff]
extend-exclude = []
ignore = [
    "E402",
    "E501",
    "E722",
    "B008",
    "B905",
    "F401",
    "TID252",
    "TRY002",
    "TRY003",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF006",
    "RUF012",
    "RUF100",
    "PGH003",
    "N801",
    "A003",
]
select = [
    "F",
    "E",
    "I",
    "B",
    "A",
    "COM",
    "C4",
    "ISC",
    "PIE",
    "PYI",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "ARG",
    "PTH",
    "PGH",
    "TRY",
    "RUF",
]
